# simple-dns-client

./: .gitignore  README.md  dns_client_tests.py  pyproject.toml  todos.txt
dns_client/: __main__.py  cli.py  configuration.py  packet.py  transmission.py
